--- a/style.css
+++ b/style.css
@@ -1,83 +1,108 @@
 body{
-    background-color: silver;
-    color: white;
-    padding: 25px;
-    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
-h1{
-    background-color: white;
+.main{
+    width: 100%;
+}
+nav{
+    width: 100%;
+ background-color: #666;
+    height: 80px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-weight: bolder;
+}
+a{
+    text-decoration: none;
     color: red;
-    text-shadow: 2px 2px 2px 5px black;
-    text-align: center;
-    font-size: 65px;
-    border-radius: 50px;
-    border-style: groove;
-    border-color: slategrey whitesmoke;
-    border-width: 25px;
+    font-size: 20px;
+    transition: 0.5s ease;
 }
-p{
-    padding: 5px;
-    margin: 0%;
-
+ul li{
+    float: left;
+    list-style: none;
+    padding: 0px 10px;
+    color: #fff685;
+    font-size: 20px;
 }
-p.zero{
-    background-color: rgb(244, 90, 139);
-
+ul{
+    margin: 0px;
 }
-p.n{
-    background-color: rgb(243, 106, 152);
-
+.logo a{
+    font-size: 30px;
+    color: #ff1d58;;
+    font-weight: bold;
+    margin-top: 10px;
 }
-p.m{
-    background-color: rgb(244, 123, 166);
-
+ul li a:hover {
+    color: red;
 }
-p.l{
-    background-color: rgb(245, 140, 178);
-
+.header{
+    background-image: url('a.jpg');
+    background-size: cover;
+    height: 100vh;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
-p.k{
-    background-color: rgb(246, 159, 192);
-
-}
-p.j{
-    background-color: rgb(245, 176, 204);
-
-}
-p.i{
-    background-color: rgb(0, 178, 136);
-
-}
-p.h{
+.section {
+    display: flex;
+    background-color: #f5f5f5;
+    padding: 20px;
     
-    background-color: rgb(0, 178, 136);
-}
-p.g{
-    background-color: rgb(140, 202, 242);
-
-}
-p.f{
-    background-color: rgb(114, 193, 1240);
-
-}
-p.e{
-    background-color: rgb(84, 182, 237);
-
-}
-p.d{
-    background-color: rgb(48, 170, 233);
-
-}
-p.c{
-    background-color: rgb(0, 160, 230);
-
-}
-p.b{
-    background-color: rgb(0, 149, 226);
-
-}
-p.a{
-    background-color: rgb(0, 136, 221);
-
-}
-
+  }
+  
+  .text {
+    flex: 1;
+    margin-right: 20px;
+    align-content: center;
+    text-align: center;
+    margin-top: 200px;
+  }
+  
+  .image {
+    flex: 1;
+    border-radius: 30px;
+  }
+  
+  h2 {
+    color:blue;
+  }
+  
+  p {
+    color: #666;
+  }
+  
+  img {
+    max-width: 100%;
+    height: auto;
+  }
+  footer {
+    background-color:  #88B04B;
+    padding: 20px;
+  }
+  
+  .footer-icons {
+    display: flex;
+    justify-content: space-between;
+    color: white;
+  }
+  
+  .icon {
+    text-align: center;
+  }
+  
+  .icon i {
+    font-size: 24px;
+    margin-bottom: 10px;
+  }
+  
+  .icon p {
+    font-size: 12px;
+    color: white;
+    font-weight: bolder;
+  }
+  
